--- a/ieclub-taro/src/components/TopicCard/index.scss
+++ b/ieclub-taro/src/components/TopicCard/index.scss
@@ -1,6 +1,6 @@
 /* ==================== 3. 话题卡片组件优化 src/components/TopicCard/index.scss ==================== */
 
-@import '../../styles/variables.scss';
+@use '../../styles/variables.scss' as *;
 
 .topic-card {
   background: $bg-primary;
