--- a/ieclub-taro/src/app.scss
+++ b/ieclub-taro/src/app.scss
@@ -16,8 +16,8 @@ page {
   background: #f5f5f5;
   color: #333333;
   
-  // 字号和行高
-  font-size: 14px;
+  // 字号和行高 - 增大基础字体大小
+  font-size: 16px;
   line-height: 1.6;
 }
 
