--- a/ieclub-taro/src/app.scss
+++ b/ieclub-taro/src/app.scss
@@ -12,7 +12,21 @@
 @use './styles/web-optimizations.scss' as *;
 
 // ==================== 重置样式 ====================
-* {
+// 小程序兼容的重置样式
+page,
+view,
+text,
+image,
+button,
+input,
+textarea,
+scroll-view,
+swiper,
+swiper-item,
+movable-area,
+movable-view,
+cover-view,
+cover-image {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
